# dispatcher-plugin-multi-messenger

./: .gitignore  setup.cfg
dispatcher_plugin_multimessenger/: __init__.py  dataserver_dispatcher.py  exposer.py  products.py  queries.py  schema.py
dispatcher_plugin_multimessenger/config_dir/: data_server_conf.yml
