[metadata]
name = dispatcher-plugin-multimessenger
version = 0.0.1

[options]
packages = dispatcher_plugin_multimessenger
install_requires =
    cdci_data_analysis
    oda_api[gw]
    dispatcher_plugin_gw
    dispatcher_plugin_integral_all_sky

[options.extras_require] 
test = 
    pytest
    psutil